date:at morning 2018-07-30  comment:  1-Home Page Post Cell with Type  2-Profile Post Cell with type  3-Localize Category , Subcategory , City , area ,Post  4-Post Filter (TagView Except Suggestion)
 Note: please note Add (Ads ,Business ,post)
 commit in mainActivity

--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -153,6 +153,7 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
                         android:layout_gravity="bottom"
+                        android:layout_marginBottom="@dimen/sm_margin"
                         android:contentDescription="@string/contentDescription"
                         android:src="@drawable/ic_previous_volume_24dp"
                         android:visibility="invisible" />
