--- a/app/src/main/res/layout/post_search_layout.xml
+++ b/app/src/main/res/layout/post_search_layout.xml
@@ -67,17 +67,25 @@
                         android:id="@+id/searchIcon"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_above="@+id/search_separator"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
                         android:contentDescription="@string/contentDescription"
                         android:src="@drawable/ic_search_24dp" />
 
                     <View
+                        android:id="@+id/search_separator"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/sperator"
                         android:layout_below="@+id/searchTagView"
                         android:background="@color/lightgray" />
+
+                    <com.brainsocket.globalpages.views.SuggestionTagView
+                        android:id="@+id/suggestionTagsView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/search_separator"
+                        android:visibility="gone" />
 
                 </RelativeLayout>
 
