date:at 2018-07-31  comment:  1-Solve svg (drawable left) bugs

--- a/mainlibrary/src/main/res/values/styles.xml
+++ b/mainlibrary/src/main/res/values/styles.xml
@@ -221,7 +221,8 @@
         <item name="android:gravity">center_vertical|center_horizontal</item>
     </style>
 
-    <style name="AppTheme.MainToggle" parent="@style/AppTheme">
+    /*parent="@style/AppTheme"*/
+    <style name="AppTheme.MainToggle">
 
 
     </style>
