date:at 2018-08-02  comment:  1-UI enhancement

--- a/app/src/main/res/drawable/button_bg.xml
+++ b/app/src/main/res/drawable/button_bg.xml
@@ -3,7 +3,9 @@
 
     <item>
         <shape>
-            <solid android:color="@color/colorPrimary" />
+            <!--<solid android:color="@color/colorPrimary" />-->
+            <gradient android:startColor="@color/colorGradientStart"
+                android:endColor="@color/colorGradientEnd"/>
             <corners android:radius="180dp" />
         </shape>
 
