--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -83,14 +83,13 @@
                         android:weightSum="3"
                         app:layout_collapseMode="pin">
 
-
                         <android.support.v7.widget.CardView
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             app:cardBackgroundColor="@color/transparent"
                             app:cardCornerRadius="@dimen/cardRadius"
-                            app:cardElevation="@dimen/cardview_default_elevation"
+                            app:cardElevation="@dimen/elevation"
                             app:cardUseCompatPadding="true">
 
                             <android.support.v7.widget.AppCompatButton
@@ -101,10 +100,12 @@
                                 android:layout_weight="1"
                                 android:background="#00AFFF"
                                 android:backgroundTint="#00AFFF"
+                                android:shadowColor="@color/black"
+                                android:shadowRadius="@integer/textShadow"
                                 android:text="@string/BusinessGuide"
+                                android:textStyle="bold"
                                 app:backgroundTint="#00AFFF" />
                         </android.support.v7.widget.CardView>
-
 
                         <android.support.v7.widget.CardView
                             android:layout_width="0dp"
@@ -112,7 +113,7 @@
                             android:layout_weight="1"
                             app:cardBackgroundColor="@color/transparent"
                             app:cardCornerRadius="@dimen/cardRadius"
-                            app:cardElevation="@dimen/cardview_default_elevation"
+                            app:cardElevation="@dimen/elevation"
                             app:cardUseCompatPadding="true">
 
                             <android.support.v7.widget.AppCompatButton
@@ -123,7 +124,8 @@
                                 android:layout_weight="1"
                                 android:background="#88CE8F"
                                 android:shadowColor="@color/grayDarkTextColor"
-                                android:text="@string/FindNearBy" />
+                                android:text="@string/FindNearBy"
+                                android:textStyle="bold" />
                         </android.support.v7.widget.CardView>
 
                         <android.support.v7.widget.CardView
@@ -132,7 +134,7 @@
                             android:layout_weight="1"
                             app:cardBackgroundColor="@color/transparent"
                             app:cardCornerRadius="@dimen/cardRadius"
-                            app:cardElevation="@dimen/cardview_default_elevation"
+                            app:cardElevation="@dimen/elevation"
                             app:cardUseCompatPadding="true">
 
                             <android.support.v7.widget.AppCompatButton
@@ -143,14 +145,16 @@
                                 android:layout_weight="1"
                                 android:background="#FEACBA"
                                 android:shadowColor="@color/grayDarkTextColor"
-                                android:text="@string/OnDutyPharmacies" />
+                                android:text="@string/OnDutyPharmacies"
+                                android:textStyle="bold" />
                         </android.support.v7.widget.CardView>
+
                     </LinearLayout>
 
                     <ImageView
                         android:id="@+id/previousBtn1"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="40dp"
                         android:layout_alignParentBottom="true"
                         android:layout_gravity="bottom"
                         android:layout_marginBottom="@dimen/sm_margin"
@@ -184,7 +188,6 @@
                     android:id="@+id/volumesRecyclerView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
-
 
             </com.brainsocket.mainlibrary.Views.Stateslayoutview>
 
@@ -278,25 +281,25 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:layout_toLeftOf="@+id/nearbyBtn"
-                        android:layout_toStartOf="@+id/nearbyBtn"
+                        android:layout_toLeftOf="@+id/addBusinessBtn"
+                        android:layout_toStartOf="@+id/addBusinessBtn"
                         android:contentDescription="@string/contentDescription"
                         android:src="@drawable/places_ic_search" />
 
                     <ImageView
-                        android:id="@+id/nearbyBtn"
+                        android:id="@+id/addBusinessBtn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
                         android:contentDescription="@string/contentDescription"
-                        android:src="@drawable/ic_nearby_24dp" />
+                        android:src="@drawable/ic_plus_gray_24dp" />
 
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/sperator"
-                        android:layout_below="@id/nearbyBtn"
+                        android:layout_below="@id/addBusinessBtn"
                         android:background="@color/colorPrimary"
                         android:visibility="invisible" />
 
