--- a/app/src/main/res/layout/subcategory_item_layout.xml
+++ b/app/src/main/res/layout/subcategory_item_layout.xml
@@ -10,7 +10,7 @@
         style="@style/AppTheme.MainToggle"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/recyclerviewTagHeight"
-        android:layout_margin="@dimen/xxsm_margin"
+        android:layout_margin="@dimen/sm_margin"
         android:background="@drawable/ic_cat_tag_bg"
         android:maxLines="1"
         android:padding="@dimen/xsm_padding"
