--- a/app/src/main/res/drawable/ic_cat_tag.xml
+++ b/app/src/main/res/drawable/ic_cat_tag.xml
@@ -14,7 +14,8 @@
     <item android:color="@color/white" android:state_checked="true">
         <shape>
             <stroke android:width="1dp" android:color="@color/colorPrimary" />
-            <solid android:color="@color/colorAccent" />
+            <gradient android:startColor="@color/colorGradientStart"
+                android:endColor="@color/colorGradientEnd"/>
             <corners android:radius="25dp" />
         </shape>
     </item>
