--- a/app/src/main/res/drawable/ic_view_tag.xml
+++ b/app/src/main/res/drawable/ic_view_tag.xml
@@ -14,7 +14,10 @@
     <item android:color="@color/white" >
         <shape>
             <stroke android:width="1dp" android:color="@color/colorPrimary" />
-            <solid android:color="@color/colorPrimary" />
+            <!--<solid  android:color="@color/colorPrimary" />-->
+            <gradient android:startColor="@color/colorGradientStart"
+                android:endColor="@color/colorGradientEnd"/>
+
             <corners android:radius="25dp" />
         </shape>
     </item>
