--- a/app/src/main/res/layout/business_guide_entity_item_layout.xml
+++ b/app/src/main/res/layout/business_guide_entity_item_layout.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="@dimen/businessItemWidth"
     android:layout_height="match_parent">
-
 
     <android.support.v7.widget.CardView
         android:id="@+id/businessCard"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="@dimen/cardview_default_radius"
-        app:cardElevation="@dimen/cardview_default_elevation"
-        app:cardUseCompatPadding="true">
+        android:layout_margin="@dimen/zero"
+        app:cardBackgroundColor="@color/transparent"
+        app:cardCornerRadius="@dimen/md_cardRadius"
+        app:cardElevation="@dimen/md_elevation"
+        app:cardPreventCornerOverlap="false"
+        app:cardUseCompatPadding="true"
+        app:contentPadding="@dimen/zero">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -20,9 +22,11 @@
 
             <android.support.v7.widget.AppCompatImageView
                 android:id="@+id/businessIcon"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="@dimen/zero"
                 android:adjustViewBounds="true"
+                android:padding="@dimen/zero"
                 android:scaleType="center" />
 
             <android.support.v7.widget.AppCompatTextView
@@ -33,13 +37,13 @@
                 android:gravity="center"
                 android:shadowColor="@color/lightgray"
                 android:shadowRadius="@integer/textShadow"
-                android:textAlignment="gravity"
+                android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent" />
+
         </android.support.constraint.ConstraintLayout>
 
     </android.support.v7.widget.CardView>
-
 
 </RelativeLayout>
