--- a/app/src/main/res/layout/forgotpassword_layout.xml
+++ b/app/src/main/res/layout/forgotpassword_layout.xml
@@ -25,7 +25,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/lg_margin"
+        android:layout_margin="@dimen/sm_margin"
         android:background="@color/white"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="@dimen/cardRadius"
@@ -67,6 +67,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/Email"
                 app:errorEnabled="true"
+
                 app:errorTextAppearance="@style/ErrorText"
                 app:hintTextAppearance="@style/HintText"
                 app:layout_constraintBottom_toTopOf="@+id/guideLineEmail"
@@ -76,9 +77,9 @@
                     android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textEmailAddress" />
+                    android:inputType="textEmailAddress"
+                    android:textStyle="bold" />
             </android.support.design.widget.TextInputLayout>
-
 
             <LinearLayout
                 android:id="@+id/forgotPasswordBtnContainer"
@@ -86,7 +87,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:weightSum="6"
-                app:layout_constraintTop_toBottomOf="@+id/emailLayout">
+                app:layout_constraintBottom_toBottomOf="parent">
 
                 <View
                     android:layout_width="0dp"
