--- a/app/src/main/res/layout/post_details_layout.xml
+++ b/app/src/main/res/layout/post_details_layout.xml
@@ -61,6 +61,7 @@
         <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fillViewport="true"
             app:behavior_overlapTop="60dp"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
             <!--android:scrollbars="vertical"-->
@@ -68,9 +69,9 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/flexible.example.cardview"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:background="@color/white"
-                app:cardBackgroundColor="@color/white"
+                app:cardBackgroundColor="@color/transparent"
                 app:cardCornerRadius="4dp"
                 app:cardElevation="15dp"
                 app:cardUseCompatPadding="true"
@@ -81,7 +82,7 @@
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="match_parent">
 
                     <android.support.constraint.ConstraintLayout
                         android:id="@+id/info_Layout"
@@ -89,7 +90,9 @@
                         android:layout_height="wrap_content"
                         android:background="@color/profileHeaderColor"
                         android:paddingEnd="@dimen/md_padding"
+                        android:paddingLeft="@dimen/zero"
                         android:paddingRight="@dimen/md_padding"
+                        android:paddingStart="@dimen/zero"
                         android:paddingTop="@dimen/md_padding">
 
                         <android.support.v7.widget.AppCompatTextView
@@ -165,7 +168,7 @@
                                 android:layout_below="@+id/tag2"
                                 android:layout_marginLeft="@dimen/md_margin"
                                 android:layout_marginStart="@dimen/md_margin"
-                                android:layout_marginTop="@dimen/lg_margin"
+                                android:layout_marginTop="@dimen/md_margin"
                                 android:orientation="vertical">
 
                                 <android.support.v7.widget.AppCompatTextView
@@ -195,7 +198,7 @@
                                 android:layout_below="@id/locationLayout"
                                 android:layout_marginLeft="@dimen/md_margin"
                                 android:layout_marginStart="@dimen/md_margin"
-                                android:layout_marginTop="@dimen/md_margin"
+                                android:layout_marginTop="@dimen/xsm_margin"
                                 android:orientation="vertical">
 
                                 <android.support.v7.widget.AppCompatTextView
@@ -212,7 +215,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center"
-                                    android:text="Damacus"
+                                    android:text="Damascus"
                                     android:textAlignment="gravity"
                                     android:textColor="@color/white"
                                     android:textStyle="bold" />
@@ -225,7 +228,7 @@
                                 android:layout_below="@id/cityLayout"
                                 android:layout_marginLeft="@dimen/md_margin"
                                 android:layout_marginStart="@dimen/md_margin"
-                                android:layout_marginTop="@dimen/md_margin"
+                                android:layout_marginTop="@dimen/xsm_margin"
                                 android:orientation="vertical">
 
                                 <android.support.v7.widget.AppCompatTextView
@@ -265,7 +268,7 @@
                                     style="@style/AppTheme.TextAppearance"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_gravity="center|bottom"
+                                    android:layout_gravity="center"
                                     android:drawableLeft="@drawable/ic_phone_white_24dp"
                                     android:drawablePadding="@dimen/md_padding"
                                     android:drawableStart="@drawable/ic_phone_white_24dp"
@@ -283,6 +286,7 @@
                     <android.support.constraint.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@color/white"
                         app:layout_constraintTop_toBottomOf="@id/info_Layout">
 
                         <android.support.v7.widget.AppCompatTextView
