--- a/app/src/main/res/layout/post_search_layout.xml
+++ b/app/src/main/res/layout/post_search_layout.xml
@@ -39,132 +39,168 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:padding="@dimen/md_padding">
+                android:paddingBottom="@dimen/md_padding">
 
-                <TextView
-                    style="@style/AppTheme.TextAppearance"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/Searchkeyword"
-                    android:textColor="@color/lightgray" />
+                    android:layout_height="match_parent"
+                    android:layout_above="@+id/filterBtn"
+                    android:orientation="vertical"
+                    android:padding="@dimen/md_padding">
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <com.brainsocket.globalpages.views.SearchTagView
-                        android:id="@+id/searchTagView"
+                    <TextView
+                        style="@style/AppTheme.TextAppearance"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_toLeftOf="@+id/searchIcon"
-                        android:layout_toStartOf="@+id/searchIcon" />
+                        android:text="@string/Searchkeyword"
+                        android:textColor="@color/lightgray" />
 
-                    <ImageView
-                        android:id="@+id/searchIcon"
-                        android:layout_width="wrap_content"
+                    <!--<RelativeLayout-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content">-->
+
+                    <!--<com.brainsocket.globalpages.views.SearchTagView-->
+                    <!--android:id="@+id/searchTagView"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_toLeftOf="@+id/searchIcon"-->
+                    <!--android:layout_toStartOf="@+id/searchIcon" />-->
+
+                    <!--<ImageView-->
+                    <!--android:id="@+id/searchIcon"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_above="@+id/search_separator"-->
+                    <!--android:layout_alignParentEnd="true"-->
+                    <!--android:layout_alignParentRight="true"-->
+                    <!--android:contentDescription="@string/contentDescription"-->
+                    <!--android:src="@drawable/ic_search_24dp" />-->
+
+                    <!--<View-->
+                    <!--android:id="@+id/search_separator"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="@dimen/sperator"-->
+                    <!--android:layout_below="@+id/searchTagView"-->
+                    <!--android:background="@color/lightgray" />-->
+
+                    <!--<com.brainsocket.globalpages.views.SuggestionTagView-->
+                    <!--android:id="@+id/suggestionTagsView"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_below="@+id/search_separator"-->
+                    <!--android:visibility="gone" />-->
+
+                    <!--</RelativeLayout>-->
+
+
+                    <android.support.v7.widget.AppCompatEditText
+                        android:id="@+id/filter_searchKeyword"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_above="@+id/search_separator"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentRight="true"
-                        android:contentDescription="@string/contentDescription"
-                        android:src="@drawable/ic_search_24dp" />
+                        android:drawableEnd="@drawable/ic_search_24dp"
+                        android:drawableRight="@drawable/ic_search_24dp"
+                        android:hint="@string/Keyword"
+                        android:visibility="visible"
+                        app:backgroundTint="@color/lightgray" />
+
+                    <TextView
+                        style="@style/AppTheme.TextAppearance"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/sm_margin"
+                        android:layout_marginTop="@dimen/sm_margin"
+                        android:text="@string/Category"
+                        android:textColor="@color/lightgray" />
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/filter_categories"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:tagBackgroundColor="@color/colorPrimary" />
 
                     <View
-                        android:id="@+id/search_separator"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/sperator"
-                        android:layout_below="@+id/searchTagView"
-                        android:background="@color/lightgray" />
+                        android:layout_marginBottom="@dimen/md_margin"
+                        android:layout_marginTop="@dimen/sm_margin"
+                        android:background="@color/black" />
 
-                    <com.brainsocket.globalpages.views.SuggestionTagView
-                        android:id="@+id/suggestionTagsView"
+                    <TextView
+                        style="@style/AppTheme.TextAppearance"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/search_separator"
-                        android:visibility="gone" />
+                        android:layout_marginTop="@dimen/sm_margin"
+                        android:text="@string/SubCategory"
+                        android:textColor="@color/lightgray" />
 
-                </RelativeLayout>
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/filter_subCategories"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone"
+                        app:tagBackgroundColor="@color/colorPrimary" />
 
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/sperator"
+                        android:layout_marginBottom="@dimen/md_margin"
+                        android:layout_marginTop="@dimen/sm_margin"
+                        android:background="@color/black" />
 
-                <!--<android.support.v7.widget.AppCompatEditText-->
-                <!--android:id="@+id/filter_searchKeyword"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:drawableEnd="@drawable/ic_search_24dp"-->
-                <!--android:drawableRight="@drawable/ic_search_24dp"-->
-                <!--android:hint="@string/Keyword"-->
-                <!--android:visibility="gone"-->
-                <!--app:backgroundTint="@color/lightgray" />-->
+                    <TextView
+                        style="@style/AppTheme.TextAppearance"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/sm_margin"
+                        android:text="@string/City"
+                        android:textColor="@color/lightgray" />
 
-                <TextView
-                    style="@style/AppTheme.TextAppearance"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/sm_margin"
-                    android:text="@string/Category"
-                    android:textColor="@color/lightgray" />
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/filter_cities"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:tagBackgroundColor="@color/colorPrimary" />
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/filter_categories"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:tagBackgroundColor="@color/colorPrimary" />
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/sperator"
+                        android:layout_marginBottom="@dimen/md_margin"
+                        android:layout_marginTop="@dimen/sm_margin"
+                        android:background="@color/black" />
 
-                <TextView
-                    style="@style/AppTheme.TextAppearance"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/sm_margin"
-                    android:text="@string/SubCategory"
-                    android:textColor="@color/lightgray" />
+                    <TextView
+                        style="@style/AppTheme.TextAppearance"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/md_margin"
+                        android:text="@string/Area"
+                        android:textColor="@color/lightgray" />
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/filter_subCategories"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:visibility="gone"
-                    app:tagBackgroundColor="@color/colorPrimary" />
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/filter_locations"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone"
+                        app:tagBackgroundColor="@color/colorPrimary" />
 
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/sperator"
+                        android:layout_marginBottom="@dimen/md_margin"
+                        android:layout_marginTop="@dimen/sm_margin"
+                        android:background="@color/black" />
 
-                <TextView
-                    style="@style/AppTheme.TextAppearance"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/sm_margin"
-                    android:text="@string/City"
-                    android:textColor="@color/lightgray" />
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/filter_cities"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/recyclerviewTagHeight"
-                    app:tagBackgroundColor="@color/colorPrimary" />
-
-
-                <TextView
-                    style="@style/AppTheme.TextAppearance"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/md_margin"
-                    android:text="@string/Area"
-                    android:textColor="@color/lightgray" />
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/filter_locations"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/recyclerviewTagHeight"
-                    android:visibility="gone"
-                    app:tagBackgroundColor="@color/colorPrimary" />
+                </LinearLayout>
 
                 <android.support.v7.widget.AppCompatButton
                     android:id="@+id/filterBtn"
                     style="@style/AppTheme.NormalButtonStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
                     android:layout_margin="@dimen/md_margin"
                     android:background="@drawable/button_bg"
                     android:padding="@dimen/md_padding"
@@ -172,7 +208,8 @@
                     android:text="@string/Apply"
                     android:textColor="@color/white" />
 
-            </LinearLayout>
+            </RelativeLayout>
+
 
         </android.support.v7.widget.CardView>
 
