--- a/app/src/main/res/layout/signin_layout.xml
+++ b/app/src/main/res/layout/signin_layout.xml
@@ -15,8 +15,8 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/lg_margin"
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/sm_margin"
         android:background="@color/white"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="@dimen/cardRadius"
@@ -25,6 +25,7 @@
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline">
 
         <android.support.constraint.ConstraintLayout
@@ -40,7 +41,7 @@
                 android:layout_margin="@dimen/lg_margin"
                 android:padding="@dimen/lg_padding"
                 android:text="@string/signInHeader"
-                android:textStyle="bold" />
+                android:textStyle="normal" />
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/emailLayout"
@@ -54,10 +55,12 @@
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/email"
+                    style="@style/AppTheme.EditTextStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textEmailAddress"
-                    android:text="adhamkhwaldeh@gmail.com" />
+                    android:text="adhamkhwaldeh@gmail.com"
+                    android:textStyle="bold" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -113,7 +116,7 @@
                     android:layout_weight="4"
                     android:background="@drawable/button_bg"
                     android:elevation="@dimen/elevation"
-                    android:padding="@dimen/md_padding"
+                    android:padding="@dimen/sm_padding"
                     android:shadowColor="@color/black"
                     android:text="@string/Login"
                     android:textColor="@color/white"
