--- a/app/src/main/res/layout/signup_layout.xml
+++ b/app/src/main/res/layout/signup_layout.xml
@@ -18,7 +18,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/lg_margin"
+        android:layout_margin="@dimen/sm_margin"
         android:background="@color/white"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="@dimen/cardRadius"
@@ -56,7 +56,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textEmailAddress"
-                    android:text="adhamkhwaldeh@gmail.com" />
+                    android:text="adhamkhwaldeh@gmail.com"
+                    android:textStyle="bold" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
