--- a/app/src/main/res/layout/toolbar_main_layout.xml
+++ b/app/src/main/res/layout/toolbar_main_layout.xml
@@ -24,7 +24,8 @@
             android:shadowColor="@color/grayDarkTextColor"
             android:shadowRadius="8"
             android:text="@string/app_name"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/notificationBtn"
