--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,4 +31,8 @@
     </style>
 
 
+    <style name="AppTheme.EditTextStyle" parent="Base.V7.Widget.AppCompat.EditText">
+
+    </style>
+
 </resources>
