--- a/mainlibrary/src/main/res/values/colors.xml
+++ b/mainlibrary/src/main/res/values/colors.xml
@@ -3,6 +3,10 @@
 
     <color name="colorPrimaryDark">#F3C100</color>
     <color name="colorPrimary">#F3C100</color>
+
+    <color name="colorGradientStart">#FED300</color>
+    <color name="colorGradientEnd">#EEB800</color>
+
     <color name="colorAccent">#3F4547</color>
     <color name="colorAlphaPrimary">#44F3C100</color>
 
